[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/art/enemies/evil_coconut.png" type="Texture" id=1]
[ext_resource path="res://assets/art/enemies/evil_coconut_run.png" type="Texture" id=2]
[ext_resource path="res://src/enemies/EvilCoconut.gd" type="Script" id=3]
[ext_resource path="res://scenes/enemies/EnemyHealthbar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/enemies/evil_coconut_swing.png" type="Texture" id=5]
[ext_resource path="res://src/HitboxScript.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 168, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 56, 0, 56, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 56, 48 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 18.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "swing",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "windup",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 16.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 32.0
height = 64.0

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 1025
script = ExtResource( 3 )
sprite = NodePath("Sprite")

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="EnemyHealthbar" parent="." instance=ExtResource( 4 )]
position = Vector2( -32, 24 )

[node name="WorldCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048
script = ExtResource( 6 )
damage_min = 3
damage_max = 7
knockback_power = 65
knockback_length = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
rotation = 1.5708
shape = SubResource( 12 )
disabled = true

[node name="WinddupTimer" type="Timer" parent="."]

[node name="SwingTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="WinddupTimer" to="." method="_winddup_over"]
[connection signal="timeout" from="SwingTimer" to="." method="_attack_over"]
